--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,16 +11,17 @@ repository = "https://github.com/matheussrod/pyobsidian"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pytest = "^8.2.1"
-mkdocs = "^1.6.0"
 pyyaml = "^6.0.1"
+
+[tool.poetry.group.dev.dependencies]
+mkdocs = "^1.6.0"
+pytest = "^8.2.1"
+pytest-cov = "^5.0.0"
 mypy = "^1.10.0"
 types-pyyaml = "^6.0.12.20240311"
-pytest-cov = "^5.0.0"
 mkdocs-material = "^9.5.25"
 mkdocs-include-dir-to-nav = "^1.2.0"
 mkdocstrings = {extras = ["python"], version = "^0.25.1"}
-
 
 [build-system]
 requires = ["poetry-core"]
